brat/test/golden/kernel/classical_return.brat.golden
Error in test/golden/kernel/classical_return.brat@FC {start = Pos {line = 5, col = 1}, end = Pos {line = 6, col = 18}}:
-- `Bool`. We could probably catch this and make the error message nicer.
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
f :: { Qubit -o Qubit, Int }
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
f = { q -> q, 1 }
^^^^^^^^^^^^^^^^^

  Type error: Can't use Int in a kernel

